@@ -1,3 +1,11 @@
+2009-03-26  Alan Modra  <amodra@bigpond.net.au>
+
+	PR 6494
+	* elf.c (copy_elf_program_header): Do not check that PT_GNU_RELRO
+	p_filesz and p_memsz are equal.  Use p_memsz as the segment size.
+	(assign_file_positions_for_non_load_sections): Zap PT_GNU_RELRO
+	if we don't find matching PT_LOAD when copying.
+
 2009-03-25  M R Swami Reddy <MR.Swami.Reddy@nsc.com>
 
 	* elf32-crx.c (crx_elf_howto_table): Zero the src_mask field of
